# StressTesterCLI

./: .gitignore  main.py  pyproject.toml  review_results.json  scratch_async_review.py  scratch_sse_client.py
src/: api.py  caller.py  config.py  models.py
src/stresstestercli/: api.py  caller.py  cli.py  main.py
tests/: test_api.py  test_caller.py  test_models.py
